--- a/resources/styles.css
+++ b/resources/styles.css
@@ -295,13 +295,26 @@ header {
   background-attachment: fixed;
 }
 
-.hero-text-box {
+/* .hero-text-box {
   position: absolute;
   width: 1140px;
   top: 50%;
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
+} */
+
+.hero-text-box {
+  text-align: center;
+    position: absolute;
+    width: 100%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.hero-buttons {
+  padding-top: 5%;
 }
 
 .hero-text-box h1,
