--- a/servicios/styles.css
+++ b/servicios/styles.css
@@ -290,6 +290,8 @@ input[type=submit]:active {
 #showcase-servicios {
     background-color: #fff;
     padding: 10% 0; 
+    display: flex; 
+    flex-direction: column;
 }
 
 
@@ -304,7 +306,7 @@ input[type=submit]:active {
     display:block;
     margin: 0 auto;
     height: 85%;
-    border-radius: 48%;
+    border-radius: 10%;
 
 }
 
@@ -321,6 +323,9 @@ input[type=submit]:active {
     padding-top: 5%;
     text-align: center;
 }
+
+
+
 
 
 
