--- a/resources/styles.css
+++ b/resources/styles.css
@@ -418,7 +418,7 @@ header {
 
 #testimonials {
   text-align: center;
-  background-color: #204acf;
+  background-color: #012b82;
   color: #fff;
 }
 
