Added success modal and description fields

--- a/cotizador/style.css
+++ b/cotizador/style.css
@@ -32,6 +32,26 @@ body {
   display: none;
 }
 
+.message-container {
+  background-color: rgba(255, 255, 255, 0.95);
+  border-radius: 3px;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 0 auto;
+}
+
+.message-container h4 {
+  text-align: center;
+  margin-top: 5px;
+}
+
+.icon-container i {
+  font-size: 1100%;
+  color: #007f00;
+}
+
 .my-form {
   background-color: rgba(255, 255, 255, 0.95);
   border: 1px solid #d6d9dc;
@@ -144,4 +164,8 @@ textarea.touched:invalid {
 .justify-content-md-center {
   -ms-flex-pack: center !important;
   justify-content: center !important;
+}
+
+.modal-body .spinner {
+  text-align: center;
 }
