--- a/resources/queries.css
+++ b/resources/queries.css
@@ -258,4 +258,9 @@
 
 /* Small phones. From 0 to 480 px */ 
 @media only screen and (max-width: 480px) {
+    .about-us-icon {
+        height: 280px;
+        width: 280px;
+        
+    }
 }
