--- a/resources/styles.css
+++ b/resources/styles.css
@@ -368,8 +368,11 @@ header {
 /*--------------------------------------------- */
 
 .soluciones {
-  padding: 0;
+  margin-top: 100px;
+  padding: 0;  
 }
+
+.seccion-servicios { color: #012b82;}
 
 .soluciones-showcase {
   list-style: none;
