--- a/contacto/styles.css
+++ b/contacto/styles.css
@@ -285,7 +285,8 @@ input[type=submit]:active {
 }
 
 .saltillo, 
-.cdmx {
+.cdmx, 
+.celaya {
     background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.5)), to(rgba(0, 0, 0, 0.7))), url(img/hero.jpg);
     background-size: cover;
     background-position: center;
@@ -303,6 +304,10 @@ input[type=submit]:active {
 
 .saltillo {
     background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url(../resources/img/saltillo.png);
+}
+
+.celaya {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url(../resources/img/celaya_01.jpg);
 }
 
 .ciudad  {
