--- a/resources/styles.css
+++ b/resources/styles.css
@@ -506,6 +506,10 @@ textarea {
   text-align: center;
 }
 
+.cd-extra {
+  margin: 0 auto;
+}
+
 .ubicaciones h4 {
   padding-bottom: 1.2rem;
   text-align: center;
