img nueva de Saltillo

--- a/contacto/styles.css
+++ b/contacto/styles.css
@@ -303,7 +303,7 @@ input[type=submit]:active {
 
 
 .saltillo {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url(../resources/img/saltillo.png);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url(../resources/img/saltillo.JPG);
 }
 
 .celaya {
