--- a/resources/styles.css
+++ b/resources/styles.css
@@ -444,6 +444,12 @@ header {
   font-weight: 300;
 }
 
+.fa-quote-left {
+  font-size: 4rem;
+  padding-right: 2rem;
+
+}
+
 /*--------------------------------------------- */
 /*                   CONTACTO                   */
 /*--------------------------------------------- */
