--- a/resources/styles.css
+++ b/resources/styles.css
@@ -164,8 +164,7 @@ input[type="submit"] {
   margin-right: 15px;
 }
 
-.btn-ghost:link,
-.btn-ghost:visited {
+.btn-ghost {
   border: 1px solid #204acf;
   color: #204acf;
 }
@@ -238,7 +237,6 @@ input[type="submit"]:active {
 
 .navbar-toggler-icon {
   color: #fff;
-  
 }
 
 /* Sticky Nav*/
@@ -306,11 +304,11 @@ header {
 
 .hero-text-box {
   text-align: center;
-    position: absolute;
-    width: 100%;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+  position: absolute;
+  width: 100%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .hero-buttons {
@@ -331,7 +329,6 @@ header {
 #about-us {
   background-color: #fff;
   padding: 5rem 0;
-
 }
 
 .about-us-row {
@@ -339,7 +336,6 @@ header {
 }
 
 .about-us-col {
-  
   text-align: center;
   /* line-height: 350px; */
 }
@@ -369,10 +365,12 @@ header {
 
 .soluciones {
   margin-top: 100px;
-  padding: 0;  
+  padding: 0;
 }
 
-.seccion-servicios { color: #012b82;}
+.seccion-servicios {
+  color: #012b82;
+}
 
 .soluciones-showcase {
   list-style: none;
@@ -396,11 +394,11 @@ header {
 
 .soluciones-img img {
   opacity: 0.7;
-  
+
   width: 100%;
   height: auto;
   -webkit-transform: scale(1.15);
-  transform: scale(1.10);
+  transform: scale(1.1);
   -webkit-transition: opacity 0.5s, -webkit-transform 0.5s;
   transition: opacity 0.5s, -webkit-transform 0.5s;
   transition: transform 0.5s, opacity 0.5s;
@@ -412,8 +410,6 @@ header {
   transform: scale(1.03);
   opacity: 1;
 }
-
-
 
 /*--------------------------------------------- */
 /*                  TESTIMONIOS                 */
@@ -431,7 +427,7 @@ header {
 
 .testimonial-img {
   width: 10%;
-  
+
   margin: 1.2rem;
 }
 
@@ -447,7 +443,6 @@ header {
 .fa-quote-left {
   font-size: 4rem;
   padding-right: 2rem;
-
 }
 
 /*--------------------------------------------- */
@@ -456,7 +451,10 @@ header {
 
 #contact {
   padding-bottom: 5%;
-  background-image: linear-gradient(rgba(255, 255, 255, 0.3), rgba(255, 255, 255, 0.3)),
+  background-image: linear-gradient(
+      rgba(255, 255, 255, 0.3),
+      rgba(255, 255, 255, 0.3)
+    ),
     url(img/bg-contact-uuuuus.png);
   background-size: cover;
   background-position: center;
@@ -466,7 +464,6 @@ header {
   max-width: 100%;
 }
 
-
 .contact-2 {
   padding-top: 3rem;
 }
@@ -475,7 +472,6 @@ header {
   text-align: center;
   text-transform: uppercase;
 }
-
 
 .form-box {
   padding-bottom: 1.5rem;
@@ -642,4 +638,9 @@ footer {
 
 .ds-heart {
   color: #ed1944;
+}
+
+.g-recaptcha {
+  display: flex;
+  justify-content: center;
 }
