--- a/servicios/styles.css
+++ b/servicios/styles.css
@@ -1,114 +1,111 @@
 /* REAUSABLE STUFF */
 * {
-    margin: 0;
-    padding: 0;
-    -webkit-box-sizing: border-box;
-    box-sizing: border-box
-    
+  margin: 0;
+  padding: 0;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 html {
-    scroll-behavior: smooth;
-  }
+  scroll-behavior: smooth;
+}
 
 body {
-    font-family: 'Lato', sans-serif;
-    font-weight: 300;
-
+  font-family: "Lato", sans-serif;
+  font-weight: 300;
 }
-.clearfix { zoom: 1}
+.clearfix {
+  zoom: 1;
+}
 .clearfix:after {
-    content: '.';
-    clear: both;
-    display: block;
-    height: 0;
-    visibility: hidden;
+  content: ".";
+  clear: both;
+  display: block;
+  height: 0;
+  visibility: hidden;
 }
-
 
 h3 {
-    
-    padding-bottom: 1rem;
-    font-size: 2.2rem;
+  padding-bottom: 1rem;
+  font-size: 2.2rem;
 }
 
 h2 {
-    font-size: 2.6rem;
-    line-height: 1.5;
-    padding: 0 10%;
-} 
+  font-size: 2.6rem;
+  line-height: 1.5;
+  padding: 0 10%;
+}
 
 h1 {
-    font-size: 3rem;
-    font-weight: 300;
-    line-height: 1.5;
+  font-size: 3rem;
+  font-weight: 300;
+  line-height: 1.5;
 }
 
 p {
-    font-size: 1.4rem;
-    line-height: 1.5;
-    padding: 0 10%;
-    font-weight: 300;
+  font-size: 1.4rem;
+  line-height: 1.5;
+  padding: 0 10%;
+  font-weight: 300;
 }
 
 ul {
-    margin-block-start: 0;
-    padding-inline-start: 0;
+  margin-block-start: 0;
+  padding-inline-start: 0;
 }
 /*--------------------------------------------- */
 /*           REUSABLE COMPONENTS                */
 /*--------------------------------------------- */
 
 .row {
-    max-width: 90%;
-    margin: 0 auto;
-    
+  max-width: 90%;
+  margin: 0 auto;
 }
-
 
 .box {
-    padding: 1%;
+  padding: 1%;
 }
 
-section {padding: 80px 0;}
-
+section {
+  padding: 80px 0;
+}
 
 .section-title {
-    padding: 3rem 1rem 0;
-    word-spacing: 2px;
-    text-align: center;
-    margin-bottom: 30px;
-    letter-spacing: 1px;
-    text-transform: uppercase;
-    font-weight: 300;
+  padding: 3rem 1rem 0;
+  word-spacing: 2px;
+  text-align: center;
+  margin-bottom: 30px;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  font-weight: 300;
 }
 
 .section-text {
-    font-size: 1.2rem;
-    padding: 0 5%;
-    display: inline-block;
-    vertical-align: middle;
-    line-height: normal;
+  font-size: 1.2rem;
+  padding: 0 5%;
+  display: inline-block;
+  vertical-align: middle;
+  line-height: normal;
 }
 
 .divider {
-        display: block;
-        height: 2px;
-        background-color: #ff1e03;
-        content: " ";
-        width: 100px;
-        margin: 0 auto;
-        margin-bottom: 2rem;
+  display: block;
+  height: 2px;
+  background-color: #ff1e03;
+  content: " ";
+  width: 100px;
+  margin: 0 auto;
+  margin-bottom: 2rem;
 }
 
 .divider-white {
-    display: block;
-    height: 2px;
-    background-color: #fff;
-    content: " ";
-    width: 100px;
-    margin: 0 auto;
-    margin-bottom: 2rem;
+  display: block;
+  height: 2px;
+  background-color: #fff;
+  content: " ";
+  width: 100px;
+  margin: 0 auto;
+  margin-bottom: 2rem;
 }
 
 /*--------------------------------------------- */
@@ -148,297 +145,295 @@ section {padding: 80px 0;}
 
 .btn:link,
 .btn:visited,
-input[type=submit] {
-    display: inline-block;
-    padding: 10px 30px;
-    font-weight: 300;
-    text-decoration: none;
-    border-radius: 12px; 
-    -webkit-transition: background-color 0.3s, border 0.3s, color 0.3s; 
-    transition: background-color 0.3s, border 0.3s, color 0.3s; 
+input[type="submit"] {
+  display: inline-block;
+  padding: 10px 30px;
+  font-weight: 300;
+  text-decoration: none;
+  border-radius: 12px;
+  -webkit-transition: background-color 0.3s, border 0.3s, color 0.3s;
+  transition: background-color 0.3s, border 0.3s, color 0.3s;
 }
 
-
-.btn-full:link, 
+.btn-full:link,
 .btn-full:visited,
-input[type=submit] {
-    background-color: #204acf;
-    border: 1px solid #204acf;
-    color: #fff;
-    margin-right: 15px;
+input[type="submit"] {
+  background-color: #204acf;
+  border: 1px solid #204acf;
+  color: #fff;
+  margin-right: 15px;
 }
 
-.btn-ghost:link, 
+.btn-ghost:link,
 .btn-ghost:visited {
-    border: 1px solid #204acf;
-    color: #204acf;
+  border: 1px solid #204acf;
+  color: #204acf;
 }
 
 .btn:hover,
-.btn:active
- {
-    background-color: #204acf;
+.btn:active {
+  background-color: #204acf;
 }
 
-.btn-full:hover, 
+.btn-full:hover,
 .btn-full:active,
-input[type=submit]:hover,
-input[type=submit]:active {
-    border: 1px solid #204acf;
-    color: #fff;
+input[type="submit"]:hover,
+input[type="submit"]:active {
+  border: 1px solid #204acf;
+  color: #fff;
 }
 
-.btn-ghost:hover, 
+.btn-ghost:hover,
 .btn-ghost:active {
-    border: 1px solid #204acf;
-    color: #fff;
+  border: 1px solid #204acf;
+  color: #fff;
 }
 
-.btn-contact-us {width: 100%;}
-
+.btn-contact-us {
+  width: 100%;
+}
 
 /*--------------------------------------------- */
 /*                   NAV BAR                    */
 /*--------------------------------------------- */
 #hero {
-    padding: 0;
+  padding: 0;
 }
 
 .logo {
-    
-    height: 100px;
-    width: auto;
-    float: left;
-    margin-top: 20px;
+  height: 100px;
+  width: auto;
+  float: left;
+  margin-top: 20px;
 }
 
-.logo-black { 
-    display: none; 
-    height: 50px;
-    width: auto;
-    float: left;
-    margin: 5px 0;
+.logo-black {
+  display: none;
+  height: 50px;
+  width: auto;
+  float: left;
+  margin: 5px 0;
 }
-
-
 
 /* Main Nav */
 .navbar li {
-    display: inline-block;
-    margin-left: 40px;
-    color: #333;
+  display: inline-block;
+  margin-left: 40px;
+  color: #333;
 }
 
-.navbar li a:link, 
+.navbar li a:link,
 .navbar li a:visited {
-    color: #333;
-    text-decoration: none;
-    text-transform: uppercase;
-    font-size: 90%;
-    border-bottom: 2px solid transparent;
-    -webkit-transition: border-botton 0.3s;
-    transition: border-botton 0.3s;
+  color: #333;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-size: 90%;
+  border-bottom: 2px solid transparent;
+  -webkit-transition: border-botton 0.3s;
+  transition: border-botton 0.3s;
 }
 
-.navbar li a:hover, 
-.navbar li a:active{
-    
-    border-bottom: 2px solid #204acf;
-    
+.navbar li a:hover,
+.navbar li a:active {
+  border-bottom: 2px solid #204acf;
 }
 
 /* Sticky Nav*/
 
 .sticky {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    background-color: rgba(255, 255, 255, 0.98);
-    box-shadow: 0 2px 2px #efefef;
-    z-index: 9999;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background-color: rgba(255, 255, 255, 0.98);
+  box-shadow: 0 2px 2px #efefef;
+  z-index: 9999;
 }
 
-.sticky .navbar li a:link, 
+.sticky .navbar li a:link,
 .sticky .navbar li a:visited {
-    padding: 16px 0;
-    color: #555;
-    
+  padding: 16px 0;
+  color: #555;
 }
 
-.sticky .navbar { margin-top: 18px; }
+.sticky .navbar {
+  margin-top: 18px;
+}
 
-.sticky .logo { display: none;}
-.sticky .logo-black {display: block; }
-
+.sticky .logo {
+  display: none;
+}
+.sticky .logo-black {
+  display: block;
+}
 
 /*--------------------------------------------- */
 /*                   Servicios                  */
 /*--------------------------------------------- */
 
 #descripcion-servicios {
-    padding: 7% 0 0 0;
+  padding: 7% 0 0 0;
 }
 
 .texto-servicios {
-    padding: 10% 0 0;
-    text-align: center;
+  padding: 10% 0 0;
+  text-align: center;
 }
 
 /*--------------------------------------------- */
 /*            SHOWCASE SERVICIOS                */
 /*--------------------------------------------- */
 #showcase-servicios {
-    background-color: #fff;
-    padding: 10% 0; 
-    display: flex; 
-    flex-direction: column;
+  background-color: #fff;
+  padding: 10% 0;
+  display: flex;
+  flex-direction: column;
 }
 
-
 .row-showcase {
-    margin-top: 5%;
-    margin-bottom: 5%;
+  margin-top: 5%;
+  margin-bottom: 5%;
 }
 
 .img-servicios img {
-    width: 85%;
-    max-width: 450px;
-    display:block;
-    margin: 0 auto;
-    height: 85%;
-    border-radius: 10%;
-
+  width: 85%;
+  max-width: 450px;
+  display: block;
+  margin: 0 auto;
+  height: 85%;
+  border-radius: 10%;
 }
 
 .desc-servicios h3 {
-    text-align: center;
-    text-transform: uppercase;
-    letter-spacing: 1.5px;
-    
-    padding-top: 9%;
-    color: #204acf
+  text-align: center;
+  text-transform: uppercase;
+  letter-spacing: 1.5px;
+
+  padding-top: 9%;
+  color: #204acf;
 }
 
-.desc-servicios p{
-    padding-top: 5%;
-    text-align: center;
+.desc-servicios p {
+  padding-top: 5%;
+  text-align: center;
 }
-
-
-
-
-
 
 /*--------------------------------------------- */
 /*                   FOOTER                     */
 /*--------------------------------------------- */
 
-
 footer {
-    background-color: #333;
-    padding: 40px;
-    font-size: 75%;
+  background-color: #333;
+  padding: 40px;
+  font-size: 75%;
 }
 
 .footer-nav {
-    list-style: none;
-    float: left;
+  list-style: none;
+  float: left;
 }
 
 .social-links {
-    list-style: none;
-    float: right
+  list-style: none;
+  float: right;
 }
 
-.footer-nav li, 
+.footer-nav li,
 .social-links li {
-    display: inline-block;
-    margin-right: 20px;
+  display: inline-block;
+  margin-right: 20px;
 }
 
-
-.footer-nav li:last-child, 
+.footer-nav li:last-child,
 .social-links li:last-child {
-    margin: 0;
+  margin: 0;
 }
 
-.footer-nav li a:link, 
-.footer-nav li a:visited, 
-.social-links li a:link, 
+.footer-nav li a:link,
+.footer-nav li a:visited,
+.social-links li a:link,
 .social-links li a:visited {
-    text-decoration: none;
-    border: 0;
-    color: #888;
-    -webkit-transition: color 0.5s;
-    transition: color 0.5s;
+  text-decoration: none;
+  border: 0;
+  color: #888;
+  -webkit-transition: color 0.5s;
+  transition: color 0.5s;
 }
 
-.footer-nav li a:hover, 
+.footer-nav li a:hover,
 .footer-nav li a:active {
-    color: #ddd;
+  color: #ddd;
 }
 
-.social-links li a:link, 
+.social-links li a:link,
 .social-links li a:visited {
-    font-size: 140%;
+  font-size: 140%;
 }
 
 .fa-facebook-f,
 .fa-twitter,
 .fa-instagram {
-    -webkit-transition: color 0.2s;
-    transition: color 0.2s
+  -webkit-transition: color 0.2s;
+  transition: color 0.2s;
 }
 
-.fa-facebook-f:hover { color: #3b5998 }
-.fa-twitter:hover { color: #00aced }
-.fa-instagram:hover { color: #517fa4 }
+.fa-facebook-f:hover {
+  color: #3b5998;
+}
+.fa-twitter:hover {
+  color: #00aced;
+}
+.fa-instagram:hover {
+  color: #517fa4;
+}
 
-.fa-heart{color:red;}
+.fa-heart {
+  color: red;
+}
 
 #footer-ds a:visited,
 #footer-ds a:link {
-    text-decoration: none;
-    color: #ddd;
+  text-decoration: none;
+  color: #ddd;
 }
 
-.footer li a:link, 
+.footer li a:link,
 .footer li a:visited {
-    font-size: 0.8rem;
-    color: #ddd;
+  font-size: 0.8rem;
+  color: #ddd;
 }
 
 .footer-nav li a:hover {
-    color: #27b897;
-    transition: color 0.6s;
-
-
+  color: #27b897;
+  transition: color 0.6s;
 }
 
-
-#footer-ds a:hover { 
-    color: #00aced;
-    transition: color 0.6s;
+#footer-ds a:hover {
+  color: #00aced;
+  transition: color 0.6s;
 }
 
-
-.footer-text{
-    font-size: 0.5rem;
-    color: #888;
-    text-transform: uppercase;
-    text-align: center;
+.footer-text {
+  font-size: 0.5rem;
+  color: #888;
+  text-transform: uppercase;
+  text-align: center;
 }
-
 
 #footer-ds {
-    font-family: 'Dawning of a New Day', cursive;
-    text-align: center;
-    font-weight: 300;
-    font-size: 1.5rem;
-    color: #ddd;
-    padding-bottom: 1rem;
+  font-family: "Dawning of a New Day", cursive;
+  text-align: center;
+  font-weight: 300;
+  font-size: 1.5rem;
+  color: #ddd;
+  padding-bottom: 1rem;
 }
 
-.ds-heart {color: #ED1944}
+.ds-heart {
+  color: #ed1944;
+}
 
+.navbar li a:hover,
+.navbar li a.active {
+  border-bottom: 2px solid #204acf;
+}
